# QuicVPN

./: Cargo.toml  LICENSE  README.md
quic_client/: Cargo.toml
quic_client/src/: main.rs
quic_proxy/: Cargo.toml
quic_proxy/src/: main.rs  proxy.conf
quic_server/: Cargo.toml
quic_server/src/: configfile.rs  main.rs
simplewintun/: Cargo.toml  build.rs
simplewintun/src/: lib.rs
simplewintun/src/cpp/: simple_wintun.cpp  simple_wintun.h  wintun.h
vpn/: Cargo.toml
vpn/src/: crypto.rs  lib.rs  linuxtun.rs  wintun.rs
