[package]
name = "quic_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "*"
derive_builder = "0.11.2"
anyhow = "*"
crc = "3"
bencher = "0.1.5"
directories-next = "2"
rand = "0.8"
rcgen = "*"
rustls = { version = "*", default-features = false, features = ["quic", "dangerous_configuration"] }
rustls-pemfile = "*"
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "io-util"] }
tokio-scoped = "*"
tokio-util = "*"
url = "2"
vpn = { path = "../vpn"}
futures = "*"
log = "*"
env_logger = "*"
toml = "*"
serde = { version = "*", features = ["derive"]}
x509-parser = "*"
httparse = "*"
regex = "*"
notify = { version = "*", default-features = false, features = ["macos_kqueue"] }
bytes = "1.2.1"
once_cell = "1"